re PR c++/40274 (Revision 145566 caused ICE in tsubst, at cp/pt.c:9289)

PR c++/40274
	* error.c (dump_template_parms): Pass all args to
	count_non_default_template_args.
	(count_non_default_template_args): Pull out the inner ones.

From-SVN: r149066